[tool.poetry]
name = "atm-project-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "atm_project_1"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
