[tool.poetry]
name = "atm-project"
version = "0.1.0"
description = ""
authors = ["Diego"]
readme = "README.md"
packages = [{include = "atm_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
